--- a/app/src/at-hauha/res/layout/fragment_login.xml
+++ b/app/src/at-hauha/res/layout/fragment_login.xml
@@ -20,7 +20,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/txtWelCome"
+            android:id="@+id/tvWelCome"
             android:layout_width="@dimen/width_304"
             android:layout_height="@dimen/heigth_32"
             android:layout_marginTop="@dimen/margin_top_28"
@@ -30,10 +30,10 @@
             app:layout_constraintEnd_toEndOf="@+id/imgBackGround"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="@+id/imgBackGround"
-            app:layout_constraintTop_toBottomOf="@+id/txtBack" />
+            app:layout_constraintTop_toBottomOf="@+id/imgBack" />
 
         <ImageView
-            android:id="@+id/txtBack"
+            android:id="@+id/imgBack"
             android:layout_width="@dimen/width_92"
             android:layout_height="@dimen/height_30"
             android:layout_marginStart="@dimen/margin_start_40dp"
@@ -43,7 +43,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/txtContinue"
+            android:id="@+id/tvContinue"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/height_24"
             android:layout_marginStart="@dimen/margin_start_40dp"
@@ -54,13 +54,13 @@
             app:layout_constraintTop_toBottomOf="@+id/imgBackGround" />
 
         <TextView
-            android:id="@+id/txtBio"
+            android:id="@+id/tvBio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_16"
             android:text="@string/textview_email_address"
-            app:layout_constraintStart_toStartOf="@+id/txtContinue"
-            app:layout_constraintTop_toBottomOf="@+id/txtContinue" />
+            app:layout_constraintStart_toStartOf="@+id/tvContinue"
+            app:layout_constraintTop_toBottomOf="@+id/tvContinue" />
 
         <EditText
             android:hint="@string/edittext_hint_email_address"
@@ -70,22 +70,22 @@
             android:text="@string/edittext_user_email_com"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/txtBio"
-            app:layout_constraintTop_toBottomOf="@+id/txtBio"
+            app:layout_constraintStart_toStartOf="@+id/tvBio"
+            app:layout_constraintTop_toBottomOf="@+id/tvBio"
             android:inputType="textEmailAddress"
             tools:ignore="Autofill" />
 
         <TextView
-            android:id="@+id/txtPrivateInfo"
+            android:id="@+id/tvPrivateInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_12"
             android:text="@string/textview_password"
-            app:layout_constraintStart_toStartOf="@+id/txtBack"
+            app:layout_constraintStart_toStartOf="@+id/imgBack"
             app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
 
         <TextView
-            android:id="@+id/txtForgot"
+            android:id="@+id/tvForgot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_12"
@@ -106,11 +106,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.465"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPrivateInfo"
+            app:layout_constraintTop_toBottomOf="@+id/tvPrivateInfo"
             tools:ignore="Autofill" />
 
         <TextView
-            android:id="@+id/txtLogin"
+            android:id="@+id/tvLogin"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_52"
             android:layout_marginTop="@dimen/margin_top_20"
@@ -125,7 +125,7 @@
             app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
         <TextView
-            android:id="@+id/txtCreate"
+            android:id="@+id/tvCreate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_16"
@@ -134,10 +134,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />
+            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
 
         <TextView
-            android:id="@+id/txtCreateAccount"
+            android:id="@+id/tvCreateAccount"
             android:layout_width="@dimen/width_152"
             android:layout_height="@dimen/heigth_56"
             android:layout_marginTop="@dimen/margin_top_20"
@@ -148,7 +148,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtCreate" />
+            app:layout_constraintTop_toBottomOf="@+id/tvCreate" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
