--- a/app/src/at-hauha/res/layout/fragment_recipes.xml
+++ b/app/src/at-hauha/res/layout/fragment_recipes.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="asiantech.internship.summer.layout.FragmentRecipes">
+    tools:context="asiantech.internship.summer.layout.RecipesFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_view"
         android:layout_width="wrap_content"
