--- a/app/src/at-daiho/res/layout/fragment_login.xml
+++ b/app/src/at-daiho/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
