--- a/app/src/at-cuongle/res/layout/activity_time_line.xml
+++ b/app/src/at-cuongle/res/layout/activity_time_line.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvFoodList"
+            android:id="@+id/recycleView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
