fixed function,format code base on conventions

--- a/app/src/at-nguyenha/res/layout/item_newfeed.xml
+++ b/app/src/at-nguyenha/res/layout/item_newfeed.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginBottom="20dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgAvatar"
@@ -11,64 +12,64 @@
         android:layout_margin="10dp"
         android:src="@drawable/ic_img_avatar"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/imgAvatar"
-        app:layout_constraintTop_toTopOf="@id/imgAvatar"
-        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
         android:layout_marginLeft="10dp"
+        android:text="@string/textview_text_name"
         android:textSize="15dp"
-        android:text="@string/cena_ha"/>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
+        app:layout_constraintLeft_toRightOf="@id/imgAvatar"
+        app:layout_constraintTop_toTopOf="@id/imgAvatar" />
 
     <ImageView
         android:id="@+id/imgOption"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/imgAvatar"
-        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
+        android:layout_margin="20dp"
         android:src="@drawable/ic_3dot"
-        android:layout_margin="20dp"/>
-    
+        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imgAvatar" />
+
     <ImageView
-        android:id="@+id/imgMainphoto"
+        android:id="@+id/imgMainPhoto"
         android:layout_width="match_parent"
         android:layout_height="375dp"
         android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@id/imgAvatar"
-        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/ic_hamburger"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/ic_hamburger"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />
 
     <ImageView
         android:id="@+id/imgHeart"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@id/imgMainphoto"
-        app:layout_constraintLeft_toLeftOf="@id/imgMainphoto"
-        android:src="@drawable/ic_heart"/>
+        android:src="@drawable/ic_heart"
+        app:layout_constraintLeft_toLeftOf="@id/imgMainPhoto"
+        app:layout_constraintTop_toBottomOf="@id/imgMainPhoto" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgComment"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:layout_constraintTop_toTopOf="@id/imgHeart"
+        android:src="@drawable/ic_comment"
         app:layout_constraintLeft_toRightOf="@id/imgHeart"
-        android:src="@drawable/ic_comment"/>
+        app:layout_constraintTop_toTopOf="@id/imgHeart" />
 
     <ImageView
         android:id="@+id/imgShare"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:layout_constraintTop_toTopOf="@id/imgHeart"
+        android:src="@drawable/ic_share"
         app:layout_constraintLeft_toRightOf="@id/imgComment"
-        android:src="@drawable/ic_share"/>
+        app:layout_constraintTop_toTopOf="@id/imgHeart" />
 
     <View
         android:id="@+id/vLine"
@@ -77,55 +78,54 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/imgHeart"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgHeart" />
 
     <ImageView
-        android:id="@+id/imgHeartblack"
+        android:id="@+id/imgHeartBlack"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@id/vLine"
-        app:layout_constraintLeft_toLeftOf="@id/imgMainphoto"
-        android:src="@drawable/ic_heart_black"/>
+        android:src="@drawable/ic_heart_black"
+        app:layout_constraintLeft_toLeftOf="@id/imgMainPhoto"
+        app:layout_constraintTop_toBottomOf="@id/vLine" />
 
     <TextView
-        android:id="@+id/tvHeartnumber"
+        android:id="@+id/tvHeartNumber"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        app:layout_constraintLeft_toRightOf="@id/imgHeartblack"
-        app:layout_constraintTop_toTopOf="@id/imgHeartblack"
-        app:layout_constraintBottom_toBottomOf="@id/imgHeartblack"
-        android:text="@string/_12"/>
+        android:text="@string/textview_text_like_number"
+        app:layout_constraintBottom_toBottomOf="@id/imgHeartBlack"
+        app:layout_constraintLeft_toRightOf="@id/imgHeartBlack"
+        app:layout_constraintTop_toTopOf="@id/imgHeartBlack" />
 
     <TextView
+        android:id="@+id/tvLike"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginLeft="2dp"
-        app:layout_constraintLeft_toRightOf="@id/tvHeartnumber"
-        app:layout_constraintTop_toTopOf="@id/imgHeartblack"
-        app:layout_constraintBottom_toBottomOf="@id/imgHeartblack"
-        android:text="@string/textview_text_likes"/>
+        android:text="@string/textview_text_likes"
+        app:layout_constraintBottom_toBottomOf="@id/imgHeartBlack"
+        app:layout_constraintLeft_toRightOf="@id/tvHeartNumber"
+        app:layout_constraintTop_toTopOf="@id/imgHeartBlack" />
 
     <TextView
-        android:id="@+id/tvNamestatus"
+        android:id="@+id/tvNameStatus"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
+        android:text="@string/textview_text_name"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/imgHeartblack"
-        app:layout_constraintLeft_toLeftOf="@id/imgHeartblack"
-        android:text="@string/cena_ha"/>
-
+        app:layout_constraintLeft_toLeftOf="@id/imgHeartBlack"
+        app:layout_constraintTop_toBottomOf="@id/imgHeartBlack" />
 
     <TextView
         android:id="@+id/tvStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/textview_text_status"
         android:textSize="15dp"
-        app:layout_constraintTop_toBottomOf="@id/tvNamestatus"
         app:layout_constraintLeft_toLeftOf="@id/vLine"
-        android:text="@string/textview_text_status"/>
-
+        app:layout_constraintTop_toBottomOf="@id/tvNameStatus" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
