--- a/app/src/at-cuongle/res/layout/row_item.xml
+++ b/app/src/at-cuongle/res/layout/row_item.xml
@@ -120,7 +120,7 @@
         android:layout_width="@dimen/width_50dp"
         android:layout_height="@dimen/height_50dp"
         android:layout_marginTop="@dimen/margin_20dp"
-        android:src="@drawable/img_avatar"
+        android:src="@drawable/ic_avatar"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
         app:layout_constraintTop_toTopOf="parent" />
 
